# framework.appfw.vconf

./: .gitignore  001.vconf.patch.sh  AUTHORS  CMakeLists.txt  org.vconf.restore.service.in  vconf-init  vconf-kdb.c  vconf-restore-key.sh  vconf.c  vconf.manifest  vconf.pc.in  vconf_dump.sh  vconftool.c  vconftool_new.c
TC/unit/: Makefile  tslist
doc/: vconf_doc.h
include/: SLP_vconf_PG.h  vconf-internals.h  vconf-keys.h  vconf-log.h  vconf.h
packaging/: vconf-setup.service  vconf.spec
test/: vconf_notitest.c  vconf_timecheck.c  vconf_unit_test.c
